# discord-social

./: .gitignore  CMakeLists.txt  README.md  download-sdk.sh
.github/workflows/: ci-build.yml  release-linux-legacy.yml  release-linux.yml  release-macos.yml  release-source.yml  release-windows.yml  release.yml  upload-cdn.yml  upload-github.yml
cmake/: PackageBundle.cmake  PostInstall.cmake.in
os/macos/: Install  notarize.sh
os/windows/: library.manifest
src/: plugin.cpp
